# qt-temp

./: .clang-tidy  .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/workflows/: cmake.yml
src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
test/: CMakeLists.txt  demo.cpp
